--- a/content/themes/rolledesign/sass/views/_now.scss
+++ b/content/themes/rolledesign/sass/views/_now.scss
@@ -31,6 +31,10 @@
     padding-bottom: var(--padding-container-vertical);
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
+
+    @media (max-width: 800px) {
+      padding-bottom: 20rem;
+    }
   }
 }
 
